@@ -186,7 +186,7 @@ enum { t_LFUN_GENERIC, t_LFUN_ZETA, t_LFUN_NF, t_LFUN_ELL, t_LFUN_KRONECKER,
        t_LFUN_CHIZ, t_LFUN_CHIGEN, t_LFUN_ETA,
        t_LFUN_DIV, t_LFUN_MUL, t_LFUN_CONJ,
        t_LFUN_SYMSQ_ELL, t_LFUN_QF, t_LFUN_ARTIN, t_LFUN_MFCLOS,
-       t_LFUN_GENUS2 };
+       t_LFUN_GENUS2, t_LFUN_TWIST };
 enum { t_LDESC_INIT, t_LDESC_THETA, t_LDESC_PRODUCT };
 
 /* Elliptic curves */
