@@ -391,4 +391,22 @@
 49658092772603273242802490196379732, -0.755928946018454454429033072468360121
 63, 0, -0.66666666666666666666666666666666666667, -0.63245553203367586639977
 870888654370674]
-Total time spent: 2448
+32 (lfun(2+2*I)): 0.71683178219623482123876107149063323079 - 0.0670150707037
+18642997575342076561776944*I
+32 (lfun): 0.92706368000081250207056652952022500618 - 0.46364938145483682270
+246750309170364992*I
+32 (lfuncreate): 0.92706368000081250207056652952022500618 - 0.46364938145483
+682270246750309170364992*I
+32 (lfunderiv): -0.14325687414515242351441502322514384981 - 0.39616475368926
+266017359177755101860385*I
+32 (lfunlambda): 12.915538538306770007023725703267817117 - 6.459406817055752
+7749411446673463446509*I
+32 (lfunderivlambda): 35.119341345499317617173671937045221290 - 7.6130893486
+359329343104104880084980135*I
+32 (lfuncheckfeq): -128
+32 (lfunhardy): -6.0689473021581631216399042218295179710
+32 (lfunorderzero): 0
+32 (lfuntheta): 0.79138040414598215782025151996013400677 - 0.693572792187828
+34814370540240036393563*I
+32 (lfunan): [1, -2*I, I, -2, 0, 2, -2*I, 0, 2, 0]
+Total time spent: 1980
