@@ -3,6 +3,7 @@ zet=1;
 Z(a)=lfuncreate([(p,n)->1/(1-p^a*x),0,[-a],2*a+1,1,1,[[a+1,1/x+O(1)]]]);
 N=nfinit(x^10-2*x^8-9*x^6+57*x^4-69*x^2+47);
 G=galoisinit(N);
+E=ellinit([0,-1,1,-10,-20]); \\ 11a1
 VALL={
 [zet,
 lfuncreate([n->vector(n,i,kronecker(i,857)),0,[0],1,857,1]),
@@ -22,7 +23,7 @@ polsubcyclo(11,5),
 857,
 \\15
 [znstar(5,1),2],
-ellinit([0,-1,1,-10,-20]),  \\ 11a1
+E,
 ellinit([1,1]),
 ellinit([-7,3]),
 lfunetaquo([1,1;3,1;5,1;15,1]),
@@ -42,7 +43,8 @@ lfunqf(matdiagonal([1,2,3,4])),
   if(1,my(K3=nfinit(a^2-a-9));
 ellinit([0,2,1,-19-8*a,28+11*a],K3)),
   if(1,my(E=ellinit([0,-1,1,-10,-20])); \\11a1
-lfuncreate([n->my(V=ellan(E,n));vector(n,i,V[i]/sqrt(i)),0,[1/2,3/2],1,11,1]))
+lfuncreate([n->my(V=ellan(E,n));vector(n,i,V[i]/sqrt(i)),0,[1/2,3/2],1,11,1])),
+lfuntwist(E, Mod(2,5))
 ];
 }
 
